# mosquitto_serial

./: Makefile
files/etc/config/: udemo
files/usr/sbin/: udemod_dog.sh
src/: CMakeLists.txt  main.c  mqtt.c  ttyd.c  udemo.h
